Ajustes split por paciente - data leakage

--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -139,35 +139,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Splits: 2500 train, 626 val\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
+      "============================================================\n",
+      "CARGA DE SPLITS (PATIENT-LEVEL)\n",
+      "============================================================\n",
+      "✓ Dataset base: 3155 casos\n",
+      "✓ Train indices: 2509 casos\n",
+      "✓ Val indices: 646 casos\n",
+      "\n",
+      "[INFO] Split aplicado (patient-level):\n",
+      "  Train: 2509 casos\n",
+      "  Val:   646 casos\n",
+      "\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "\n",
+      "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
+      "   Métricas serán más conservadoras pero generalizan mejor.\n",
+      "\n",
+      "[INFO] Split aplicado (patient-level):\n",
+      "  Train: 2509 casos\n",
+      "  Val:   646 casos\n",
+      "\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "\n",
+      "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
+      "   Métricas serán más conservadoras pero generalizan mejor.\n"
      ]
     }
    ],
    "source": [
-    "# Preprocesamiento conservador para rule-based\n",
+    "# ===============================================================\n",
+    "# CARGA DE DATOS - PATIENT-LEVEL SPLIT (SIN LEAKAGE)\n",
+    "# ===============================================================\n",
+    "# IMPORTANTE: Este baseline usa splits generados por 02_create_splits.ipynb\n",
     "#\n",
+    "# Estrategia de split:\n",
+    "#   - Por PACIENTES (no por casos/consultas)\n",
+    "#   - 72 pacientes train / 18 pacientes val\n",
+    "#   - 0% overlap (sin data leakage)\n",
+    "#\n",
+    "# ¿Por qué patient-level?\n",
+    "#   Dataset tiene estructura longitudinal: 90 pacientes × 35 consultas promedio\n",
+    "#   Split por casos → 100% pacientes en train Y val (leakage total)\n",
+    "#   Split por pacientes → 0% overlap (generaliza a pacientes nuevos)\n",
+    "#\n",
+    "# Ver detalles en: ESTRATEGIA_SPLIT_PACIENTES.md\n",
+    "\n",
+    "import pandas as pd, re, unicodedata\n",
+    "\n",
+    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
+    "print(\"=\"*60)\n",
+    "print(\"CARGA DE SPLITS (PATIENT-LEVEL)\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
+    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
+    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
+    "\n",
+    "print(f\"✓ Dataset base: {len(dataset_base)} casos\")\n",
+    "print(f\"✓ Train indices: {len(train_indices)} casos\")\n",
+    "print(f\"✓ Val indices: {len(val_indices)} casos\")\n",
+    "\n",
+    "text_col = _guess_text_col(dataset_base)\n",
+    "label_col = _guess_label_col(dataset_base)\n",
+    "\n",
+    "# ===============================================================\n",
+    "# PREPROCESAMIENTO LIGERO (conserva estructura para rule-based)\n",
+    "# ===============================================================\n",
     "# Estrategia: Mínima normalización (preserva tildes, mayúsculas, puntuación)\n",
     "# - Los patrones JSON son case-sensitive y usan tildes\n",
     "# - Solo colapsa alargamientos para mantener matching\n",
     "# - Comparación: TF-IDF normaliza todo, BETO tokeniza, Rule-based conserva estructura\n",
     "\n",
-    "import pandas as pd, re, unicodedata\n",
-    "\n",
-    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
-    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
-    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
-    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
-    "\n",
-    "text_col = _guess_text_col(dataset_base)\n",
-    "label_col = _guess_label_col(dataset_base)\n",
-    "\n",
-    "print(f\"[INFO] Splits: {len(train_indices)} train, {len(val_indices)} val\")\n",
-    "\n",
-    "# Definir función de limpieza ligera\n",
     "_RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
     "\n",
     "def clean_text_rb(s: str) -> str:\n",
@@ -191,11 +235,17 @@
     "\n",
     "dataset_base['texto_rb'] = dataset_base[text_col].map(clean_text_rb)\n",
     "\n",
+    "# Filtrar por índices (patient-level split)\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
-    "print(f\"[INFO] Distribución train: {dict(df_train[label_col].value_counts())}\")\n",
-    "print(f\"[INFO] Distribución val: {dict(df_val[label_col].value_counts())}\")"
+    "print(f\"\\n[INFO] Split aplicado (patient-level):\")\n",
+    "print(f\"  Train: {len(df_train)} casos\")\n",
+    "print(f\"  Val:   {len(df_val)} casos\")\n",
+    "print(f\"\\n[INFO] Distribución train: {dict(df_train[label_col].value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val: {dict(df_val[label_col].value_counts())}\")\n",
+    "print(\"\\n  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\")\n",
+    "print(\"   Métricas serán más conservadoras pero generalizan mejor.\")"
    ]
   },
   {
@@ -208,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -228,7 +278,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=626\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=646\n",
       "\n",
       "Components in NLP pipeline:\n",
       "\t- tok2vec\n",
@@ -241,7 +291,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=626\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=646\n",
       "\n"
      ]
     }
@@ -303,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
@@ -372,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "dd2da311",
    "metadata": {},
    "outputs": [
@@ -381,10 +431,10 @@
      "output_type": "stream",
      "text": [
       "[INFO] Análisis de errores exportado:\n",
-      "  FP Depresión: 104 casos → rule_based_fp_depresion.csv\n",
+      "  FP Depresión: 96 casos → rule_based_fp_depresion.csv\n",
       "  FN Depresión: 0 casos → rule_based_fn_depresion.csv\n",
       "  FP Ansiedad:  0 casos → rule_based_fp_ansiedad.csv\n",
-      "  FN Ansiedad:  104 casos → rule_based_fn_ansiedad.csv\n"
+      "  FN Ansiedad:  96 casos → rule_based_fn_ansiedad.csv\n"
      ]
     },
     {
