--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "361947b5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -124,17 +124,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Splits: 2500 train, 626 val\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
+      "============================================================\n",
+      "CARGA DE SPLITS (PATIENT-LEVEL)\n",
+      "============================================================\n",
+      "✓ Dataset base: 3155 casos\n",
+      "✓ Train indices: 2509 casos\n",
+      "✓ Val indices: 646 casos\n",
+      "\n",
+      "[INFO] Split aplicado (patient-level):\n",
+      "  Train: 2509 casos\n",
+      "  Val:   646 casos\n",
+      "\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "\n",
+      "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
+      "   Métricas serán más conservadoras pero generalizan mejor.\n",
+      "\n",
+      "[INFO] Split aplicado (patient-level):\n",
+      "  Train: 2509 casos\n",
+      "  Val:   646 casos\n",
+      "\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "\n",
+      "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
+      "   Métricas serán más conservadoras pero generalizan mejor.\n"
      ]
     }
    ],
    "source": [
-    "# Carga de datos y preprocesamiento agresivo para TF-IDF\n",
-    "# \n",
+    "# ===============================================================\n",
+    "# CARGA DE DATOS - PATIENT-LEVEL SPLIT (SIN LEAKAGE)\n",
+    "# ===============================================================\n",
+    "# IMPORTANTE: Este baseline usa splits generados por 02_create_splits.ipynb\n",
+    "#\n",
+    "# Estrategia de split:\n",
+    "#   - Por PACIENTES (no por casos/consultas)\n",
+    "#   - 72 pacientes train / 18 pacientes val\n",
+    "#   - 0% overlap (sin data leakage)\n",
+    "#\n",
+    "# ¿Por qué patient-level?\n",
+    "#   Dataset tiene estructura longitudinal: 90 pacientes × 35 consultas promedio\n",
+    "#   Split por casos → 100% pacientes en train Y val (leakage total)\n",
+    "#   Split por pacientes → 0% overlap (generaliza a pacientes nuevos)\n",
+    "#\n",
+    "# Ver detalles en: ESTRATEGIA_SPLIT_PACIENTES.md\n",
+    "\n",
+    "import pandas as pd, re, unicodedata\n",
+    "\n",
+    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
+    "print(\"=\"*60)\n",
+    "print(\"CARGA DE SPLITS (PATIENT-LEVEL)\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
+    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
+    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
+    "\n",
+    "print(f\"✓ Dataset base: {len(dataset_base)} casos\")\n",
+    "print(f\"✓ Train indices: {len(train_indices)} casos\")\n",
+    "print(f\"✓ Val indices: {len(val_indices)} casos\")\n",
+    "\n",
+    "text_col = _guess_text_col(dataset_base)\n",
+    "label_col = _guess_label_col(dataset_base)\n",
+    "\n",
+    "# ===============================================================\n",
+    "# PREPROCESAMIENTO AGRESIVO (máxima normalización para TF-IDF)\n",
+    "# ===============================================================\n",
     "# Estrategia: Máxima normalización (lowercase, sin tildes, sin símbolos)\n",
     "# - Reduce vocabulario y mejora robustez ante typos\n",
     "# - Marca negaciones: \"no tengo\" → \"no_tengo\" (feature diferenciado)\n",
@@ -142,19 +199,6 @@
     "#\n",
     "# Comparación: Rule-based conserva tildes, BETO solo tokeniza, TF-IDF normaliza todo\n",
     "\n",
-    "import pandas as pd, re, unicodedata\n",
-    "\n",
-    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
-    "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
-    "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
-    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
-    "\n",
-    "text_col = _guess_text_col(dataset_base)\n",
-    "label_col = _guess_label_col(dataset_base)\n",
-    "\n",
-    "print(f\"[INFO] Splits: {len(train_indices)} train, {len(val_indices)} val\")\n",
-    "\n",
-    "# Definir función de limpieza agresiva\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
     "\n",
     "def clean_text_ml(s: str) -> str:\n",
@@ -186,14 +230,20 @@
     "\n",
     "dataset_base['texto_ml'] = dataset_base[text_col].map(clean_text_ml)\n",
     "\n",
+    "# Filtrar por índices (patient-level split)\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
     "X_train, y_train = df_train['texto_ml'], df_train[label_col]\n",
     "X_val, y_val = df_val['texto_ml'], df_val[label_col]\n",
     "\n",
-    "print(f\"[INFO] Distribución train: {dict(y_train.value_counts())}\")\n",
-    "print(f\"[INFO] Distribución val: {dict(y_val.value_counts())}\")"
+    "print(f\"\\n[INFO] Split aplicado (patient-level):\")\n",
+    "print(f\"  Train: {len(X_train)} casos\")\n",
+    "print(f\"  Val:   {len(X_val)} casos\")\n",
+    "print(f\"\\n[INFO] Distribución train: {dict(y_train.value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val: {dict(y_val.value_counts())}\")\n",
+    "print(\"\\n  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\")\n",
+    "print(\"   Métricas serán más conservadoras pero generalizan mejor.\")"
    ]
   },
   {
@@ -206,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "53508f46",
    "metadata": {},
    "outputs": [
@@ -250,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "921cc305",
    "metadata": {},
    "outputs": [
@@ -307,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "6c8f2b33",
    "metadata": {},
    "outputs": [
@@ -316,10 +366,10 @@
      "output_type": "stream",
      "text": [
       "[INFO] Análisis de errores exportado:\n",
-      "  FP Depresión: 24 casos → tfidf_fp_depresion.csv\n",
-      "  FN Depresión: 27 casos → tfidf_fn_depresion.csv\n",
-      "  FP Ansiedad:  27 casos → tfidf_fp_ansiedad.csv\n",
-      "  FN Ansiedad:  24 casos → tfidf_fn_ansiedad.csv\n"
+      "  FP Depresión: 50 casos → tfidf_fp_depresion.csv\n",
+      "  FN Depresión: 74 casos → tfidf_fn_depresion.csv\n",
+      "  FP Ansiedad:  74 casos → tfidf_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  50 casos → tfidf_fn_ansiedad.csv\n"
      ]
     }
    ],
