--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "3bb438c5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -124,11 +124,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Splits: 2500 train, 626 val\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
-      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
-      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
+      "[INFO] Splits: 2509 train, 646 val\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
+      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n"
      ]
     }
    ],
@@ -225,19 +225,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "6298d69f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Mapeo de etiquetas: {'depresion': 0, 'ansiedad': 1}\n",
+      "[INFO] Distribución train (numérica): {0: 1745, 1: 764}\n",
+      "[INFO] Distribución val (numérica): {0: 485, 1: 161}\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7593fabf6331452eb2be37964b3e35fe",
+       "model_id": "94577eaedbd2498c8d5b5e95077c8b69",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/2500 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/2509 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -246,16 +255,28 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ba53c2c2c294f48bb4048ea0d5fae55",
+       "model_id": "66c6b6e583e54ebf94ca0039430501ac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/646 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[INFO] Datasets creados:\n",
+      "  Train: 2509 ejemplos\n",
+      "  Val: 646 ejemplos\n",
+      "  Columnas train_ds: ['labels', 'input_ids', 'token_type_ids', 'attention_mask']\n",
+      "  Columnas val_ds: ['labels', 'input_ids', 'token_type_ids', 'attention_mask']\n"
+     ]
     }
    ],
    "source": [
@@ -265,13 +286,32 @@
     "MODEL = \"dccuchile/bert-base-spanish-wwm-cased\"  # Español cased\n",
     "tok = AutoTokenizer.from_pretrained(MODEL)\n",
     "\n",
+    "# Mapeo de etiquetas a IDs numéricos\n",
+    "label2id = {'depresion': 0, 'ansiedad': 1}\n",
+    "id2label = {0: 'depresion', 1: 'ansiedad'}\n",
+    "\n",
+    "# CRÍTICO: Agregar columna 'labels' numérica (el Trainer la requiere)\n",
+    "df_train['labels'] = df_train[label_col].map(label2id)\n",
+    "df_val['labels'] = df_val[label_col].map(label2id)\n",
+    "\n",
+    "print(f\"[INFO] Mapeo de etiquetas: {label2id}\")\n",
+    "print(f\"[INFO] Distribución train (numérica): {dict(df_train['labels'].value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val (numérica): {dict(df_val['labels'].value_counts())}\")\n",
+    "\n",
     "def preprocess(batch):\n",
     "    return tok(batch[\"texto_trf\"], truncation=True, padding=False, max_length=256)\n",
     "\n",
-    "train_ds = Dataset.from_pandas(train_df.reset_index(drop=True)).map(preprocess, batched=True, remove_columns=[\"texto_trf\"])\n",
-    "val_ds   = Dataset.from_pandas(val_df.reset_index(drop=True)).map(preprocess, batched=True, remove_columns=[\"texto_trf\"])\n",
+    "# Crear datasets con columnas: texto_trf y labels\n",
+    "train_ds = Dataset.from_pandas(df_train[['texto_trf', 'labels']].reset_index(drop=True)).map(preprocess, batched=True, remove_columns=[\"texto_trf\"])\n",
+    "val_ds = Dataset.from_pandas(df_val[['texto_trf', 'labels']].reset_index(drop=True)).map(preprocess, batched=True, remove_columns=[\"texto_trf\"])\n",
     "\n",
-    "collator = DataCollatorWithPadding(tokenizer=tok)"
+    "collator = DataCollatorWithPadding(tokenizer=tok)\n",
+    "\n",
+    "print(f\"\\n[INFO] Datasets creados:\")\n",
+    "print(f\"  Train: {len(train_ds)} ejemplos\")\n",
+    "print(f\"  Val: {len(val_ds)} ejemplos\")\n",
+    "print(f\"  Columnas train_ds: {train_ds.column_names}\")\n",
+    "print(f\"  Columnas val_ds: {val_ds.column_names}\")"
    ]
   },
   {
@@ -284,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "330e270a",
    "metadata": {},
    "outputs": [
@@ -294,10 +334,20 @@
      "text": [
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at dccuchile/bert-base-spanish-wwm-cased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2991113963.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_40837/719104514.py:39: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2991113963.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_40837/719104514.py:39: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Iniciando entrenamiento...\n",
+      "  Epochs: 3\n",
+      "  Batch size: 16\n",
+      "  Learning rate: 2e-05\n"
      ]
     },
     {
@@ -307,7 +357,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [471/471 09:36, Epoch 3/3]\n",
+       "      [471/471 53:57, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -323,27 +373,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.278500</td>\n",
-       "      <td>0.271554</td>\n",
-       "      <td>0.844963</td>\n",
-       "      <td>0.848442</td>\n",
-       "      <td>0.841738</td>\n",
+       "      <td>0.312100</td>\n",
+       "      <td>0.456319</td>\n",
+       "      <td>0.697501</td>\n",
+       "      <td>0.728790</td>\n",
+       "      <td>0.681347</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.188700</td>\n",
-       "      <td>0.289449</td>\n",
-       "      <td>0.858597</td>\n",
-       "      <td>0.882292</td>\n",
-       "      <td>0.842138</td>\n",
+       "      <td>0.218300</td>\n",
+       "      <td>0.551679</td>\n",
+       "      <td>0.715885</td>\n",
+       "      <td>0.710939</td>\n",
+       "      <td>0.721861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.114500</td>\n",
-       "      <td>0.336675</td>\n",
-       "      <td>0.873828</td>\n",
-       "      <td>0.878271</td>\n",
-       "      <td>0.869748</td>\n",
+       "      <td>0.130600</td>\n",
+       "      <td>0.536157</td>\n",
+       "      <td>0.741577</td>\n",
+       "      <td>0.736377</td>\n",
+       "      <td>0.747711</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -369,6 +419,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "[INFO] Entrenamiento completado\n",
+      "  Macro F1: 0.7416\n",
+      "  Macro Precision: 0.7364\n",
+      "  Macro Recall: 0.7477\n",
       "[INFO] Eval guardada: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n"
      ]
     }
@@ -377,8 +432,9 @@
     "import evaluate, numpy as np\n",
     "from transformers import AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
     "\n",
-    "id2label = {0:'depresion', 1:'ansiedad'}\n",
-    "label2id = {'depresion':0, 'ansiedad':1}\n",
+    "# Mapeo ya definido en celda anterior\n",
+    "# label2id = {'depresion': 0, 'ansiedad': 1}\n",
+    "# id2label = {0: 'depresion', 1: 'ansiedad'}\n",
     "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(MODEL, num_labels=2, id2label=id2label, label2id=label2id)\n",
     "\n",
@@ -421,12 +477,21 @@
     "    compute_metrics=compute_metrics\n",
     ")\n",
     "\n",
+    "print(\"[INFO] Iniciando entrenamiento...\")\n",
+    "print(f\"  Epochs: {args.num_train_epochs}\")\n",
+    "print(f\"  Batch size: {args.per_device_train_batch_size}\")\n",
+    "print(f\"  Learning rate: {args.learning_rate}\")\n",
+    "\n",
     "trainer.train()\n",
     "eval_res = trainer.evaluate()\n",
     "\n",
     "import pandas as pd\n",
     "(pd.DataFrame([eval_res]).to_csv(DATA_PATH/'beto_eval.csv', index=False, encoding='utf-8'))\n",
-    "print(\"[INFO] Eval guardada:\", DATA_PATH/'beto_eval.csv')"
+    "print(f\"\\n[INFO] Entrenamiento completado\")\n",
+    "print(f\"  Macro F1: {eval_res['eval_macro_f1']:.4f}\")\n",
+    "print(f\"  Macro Precision: {eval_res['eval_macro_precision']:.4f}\")\n",
+    "print(f\"  Macro Recall: {eval_res['eval_macro_recall']:.4f}\")\n",
+    "print(f\"[INFO] Eval guardada: {DATA_PATH/'beto_eval.csv'}\")"
    ]
   },
   {
@@ -439,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "6178f168",
    "metadata": {},
    "outputs": [
@@ -451,7 +516,25 @@
       "  - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_predictions.csv\n",
       "  - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_classification_report.csv\n",
       "  - Eval: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n",
-      "  - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_confusion_matrix.csv\n"
+      "  - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_confusion_matrix.csv\n",
+      "\n",
+      "============================================================\n",
+      "CLASSIFICATION REPORT (BETO)\n",
+      "============================================================\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   depresion       0.88      0.86      0.87       485\n",
+      "    ansiedad       0.60      0.64      0.62       161\n",
+      "\n",
+      "    accuracy                           0.80       646\n",
+      "   macro avg       0.74      0.75      0.74       646\n",
+      "weighted avg       0.81      0.80      0.80       646\n",
+      "\n",
+      "\n",
+      "Matriz de Confusión:\n",
+      "                pred_depresion  pred_ansiedad\n",
+      "true_depresion             415             70\n",
+      "true_ansiedad               58            103\n"
      ]
     }
    ],
@@ -461,7 +544,7 @@
     "\n",
     "pred_logits = trainer.predict(val_ds).predictions\n",
     "pred_ids = pred_logits.argmax(axis=-1)\n",
-    "y_true = val_df[\"label\"].to_numpy()\n",
+    "y_true = df_val[\"labels\"].to_numpy()  # CORREGIDO: usar 'labels' en lugar de 'label'\n",
     "\n",
     "# Exportables\n",
     "beto_pred_csv   = DATA_PATH/'beto_predictions.csv'\n",
@@ -469,22 +552,30 @@
     "beto_eval_csv   = DATA_PATH/'beto_eval.csv'  # ya creado arriba\n",
     "beto_cm_csv     = DATA_PATH/'beto_confusion_matrix.csv'\n",
     "\n",
-    "pd.DataFrame(classification_report(y_true, pred_ids, target_names=['depresion','ansiedad'], output_dict=True, zero_division=0))  .transpose().to_csv(beto_report_csv, index=True, encoding='utf-8')\n",
+    "pd.DataFrame(classification_report(y_true, pred_ids, target_names=['depresion','ansiedad'], output_dict=True, zero_division=0)).transpose().to_csv(beto_report_csv, index=True, encoding='utf-8')\n",
     "\n",
     "cm = confusion_matrix(y_true, pred_ids, labels=[0,1])\n",
     "pd.DataFrame(cm, index=['true_depresion','true_ansiedad'], columns=['pred_depresion','pred_ansiedad']).to_csv(beto_cm_csv)\n",
     "\n",
     "# Con textos (útil para análisis de errores)\n",
-    "val_out = val_df.copy()\n",
-    "val_out[\"y_true\"] = val_out[\"label\"].map({0:\"depresion\",1:\"ansiedad\"})\n",
-    "val_out[\"y_pred\"] = [ {0:\"depresion\",1:\"ansiedad\"}[i] for i in pred_ids ]\n",
-    "val_out.drop(columns=[\"label\"]).to_csv(beto_pred_csv, index=False, encoding=\"utf-8\")\n",
+    "val_out = df_val.copy()\n",
+    "val_out[\"y_true\"] = val_out[\"labels\"].map({0:\"depresion\",1:\"ansiedad\"})\n",
+    "val_out[\"y_pred\"] = [id2label[i] for i in pred_ids]\n",
+    "val_out.to_csv(beto_pred_csv, index=False, encoding=\"utf-8\")\n",
     "\n",
     "print(\"[INFO] Exportados:\")\n",
-    "print(\"  - Predicciones:\", beto_pred_csv)\n",
-    "print(\"  - Reporte:\", beto_report_csv)\n",
-    "print(\"  - Eval:\", beto_eval_csv)\n",
-    "print(\"  - Matriz:\", beto_cm_csv)"
+    "print(f\"  - Predicciones: {beto_pred_csv}\")\n",
+    "print(f\"  - Reporte: {beto_report_csv}\")\n",
+    "print(f\"  - Eval: {beto_eval_csv}\")\n",
+    "print(f\"  - Matriz: {beto_cm_csv}\")\n",
+    "\n",
+    "# Mostrar reporte en consola\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"CLASSIFICATION REPORT (BETO)\")\n",
+    "print(\"=\"*60)\n",
+    "print(classification_report(y_true, pred_ids, target_names=['depresion','ansiedad'], zero_division=0))\n",
+    "print(\"\\nMatriz de Confusión:\")\n",
+    "print(pd.DataFrame(cm, index=['true_depresion','true_ansiedad'], columns=['pred_depresion','pred_ansiedad']))"
    ]
   },
   {
@@ -497,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "16cdab9e",
    "metadata": {},
    "outputs": [
@@ -506,10 +597,10 @@
      "output_type": "stream",
      "text": [
       "[INFO] Análisis de errores exportado:\n",
-      "  FP Depresión: 36 casos → beto_fp_depresion.csv\n",
-      "  FN Depresión: 29 casos → beto_fn_depresion.csv\n",
-      "  FP Ansiedad:  29 casos → beto_fp_ansiedad.csv\n",
-      "  FN Ansiedad:  36 casos → beto_fn_ansiedad.csv\n"
+      "  FP Depresión: 58 casos → beto_fp_depresion.csv\n",
+      "  FN Depresión: 70 casos → beto_fn_depresion.csv\n",
+      "  FP Ansiedad:  70 casos → beto_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  58 casos → beto_fn_ansiedad.csv\n"
      ]
     }
    ],
