Se agrega limpieza oraciones duplicadas

--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -276,8 +276,8 @@
       "\t- medspacy_target_matcher\n",
       "\t- medspacy_context\n",
       "Concepts included (by folder): Ansiedad, Depresion\n",
-      "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
-      "Total target rules added: 229\n",
+      "Rule categories loaded: Abulia, Agitacinpsicomotora, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Compulsiones, Culpa, Desesperanza, DespersonalizacinDesrealizacin, Disforia, Fatiga, Hipotimia, Ideacinpersecutoria, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Obsesiones, Paranoia, PesoIncremento, PesoPrdida, Pnico, Prospeccindesesperanzada, RetraimientosocialAislamiento, Retrasopsicomotor, Rumiacin, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos, Soledad, SueoAlterado, SueoDespertartemprano, SueoHipersomnio, SueoInsomnio, SueoPesadillas\n",
+      "Total target rules added: 422\n",
       "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=646\n",
       "\n",
       "Components in NLP pipeline:\n",
@@ -289,8 +289,8 @@
       "\t- medspacy_target_matcher\n",
       "\t- medspacy_context\n",
       "Concepts included (by folder): Ansiedad, Depresion\n",
-      "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
-      "Total target rules added: 229\n",
+      "Rule categories loaded: Abulia, Agitacinpsicomotora, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Compulsiones, Culpa, Desesperanza, DespersonalizacinDesrealizacin, Disforia, Fatiga, Hipotimia, Ideacinpersecutoria, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Obsesiones, Paranoia, PesoIncremento, PesoPrdida, Pnico, Prospeccindesesperanzada, RetraimientosocialAislamiento, Retrasopsicomotor, Rumiacin, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos, Soledad, SueoAlterado, SueoDespertartemprano, SueoHipersomnio, SueoInsomnio, SueoPesadillas\n",
+      "Total target rules added: 422\n",
       "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=646\n",
       "\n"
      ]
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "dd2da311",
    "metadata": {},
    "outputs": [
@@ -431,23 +431,23 @@
      "output_type": "stream",
      "text": [
       "[INFO] Análisis de errores exportado:\n",
-      "  FP Depresión: 96 casos → rule_based_fp_depresion.csv\n",
+      "  FP Depresión: 99 casos → rule_based_fp_depresion.csv\n",
       "  FN Depresión: 0 casos → rule_based_fn_depresion.csv\n",
       "  FP Ansiedad:  0 casos → rule_based_fp_ansiedad.csv\n",
-      "  FN Ansiedad:  96 casos → rule_based_fn_ansiedad.csv\n"
+      "  FN Ansiedad:  99 casos → rule_based_fn_ansiedad.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_1040/2687782774.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fp_depresion = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_1040/2687782774.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fn_depresion = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_1040/2687782774.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fp_ansiedad = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:11: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_1040/2687782774.py:11: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fn_ansiedad = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n"
      ]
     }
